--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,9 @@ Responsive media queries
     transition: all 0.3s;
 }
 .navbar-brand {
-    font-size: 36px;
-    font-family: 'Satisfy', cursive;
+    color: #cc7979;
+    /*font-size: 36px;*/
+    /*font-family: 'Satisfy', cursive;*/
 }
 .navbar-default .navbar-brand, .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
     color: #fff;
@@ -68,17 +69,17 @@ Responsive media queries
     outline: none;
 }
 .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
-    color: #fffde0;
+    color: #cc7979;
     background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
-    color: #fffde0;
+    color: #cc7979;
     background-color: transparent;
 }
 
 .top-nav-collapse {
     padding: 0; 
-    background: rgba(50,60,70, 0.9);
+    background: rgba(0,0,0, 0.9);
 }
 
 .bg-color{
@@ -107,7 +108,7 @@ Responsive media queries
 .overlay-detail a i {
     text-align: center;
     position: absolute;
-    bottom: -140px;
+    bottom: -620px;
     font-size: 24px;
     color: #fff;
     width: 40px;
