--- a/css/style.css
+++ b/css/style.css
@@ -54,9 +54,8 @@ Responsive media queries
     transition: all 0.3s;
 }
 .navbar-brand {
-    color: #cc7979;
-    /*font-size: 36px;*/
-    /*font-family: 'Satisfy', cursive;*/
+    font-size: 36px;
+    font-family: 'Satisfy', cursive;
 }
 .navbar-default .navbar-brand, .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
     color: #fff;
@@ -69,17 +68,17 @@ Responsive media queries
     outline: none;
 }
 .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
-    color: #cc7979;
+    color: #fffde0;
     background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
-    color: #cc7979;
+    color: #fffde0;
     background-color: transparent;
 }
 
 .top-nav-collapse {
     padding: 0; 
-    background: rgba(0,0,0, 0.9);
+    background: rgba(50,60,70, 0.9);
 }
 
 .bg-color{
@@ -108,7 +107,7 @@ Responsive media queries
 .overlay-detail a i {
     text-align: center;
     position: absolute;
-    bottom: -620px;
+    bottom: -140px;
     font-size: 24px;
     color: #fff;
     width: 40px;
