--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ Responsive media queries
 }
 .title-text{
 	padding: 0px 25px 0px 0px;
-	border-right: 5px solid #BE2525;
+	border-right: 5px solid #cc7979;
 	font-size: 24px;
 }
 .about-text p{
